selfhost/test/typechecker/import/error_duplicate_type_name.3.out
Error at %FILE_NAME%:3:6
Duplicate name 'Foo'
  |  type Foo {}
          ^
This name is also declared at (1:8)
  |  import Foo from "./_exports"
            ^
