selfhost/test/typechecker/import/error_duplicate_type_name.2.abra
import Foo from "./_exports"

func Foo() {}
